syntax = "proto3";

package service;

option go_package = "pkg/app";

service SolverSvc {
  rpc Solve(CalcRequest) returns (SolutionResponse);
}

message Operation {
  string type = 1;
  string op = 2;
  string var = 3;
  string left = 4;
  string right = 5;
}

message PrintResult {
  string var = 1;
  string value = 2;
}

message CalcRequest {
  repeated Operation operations = 1;
}

message SolutionResponse {
  repeated PrintResult items = 1;
}